--- a/client/package.json
+++ b/client/package.json
@@ -20,10 +20,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
-    "@tailwindcss/postcss": "^4.1.4",
-    "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
-    "tailwindcss": "^4.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
@@ -32,12 +29,15 @@
     "@angular/cli": "^18.2.19",
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
+    "autoprefixer": "^10.4.17",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.5.2"
   }
 }
