--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,21 @@
         SA_PASSWORD: "Complex@123"
       ports:
         - "1433:1433"
+      volumes:
+      - "sql-data:/var/opt/mssql"  
+    redis:
+      image: redis:latest
+      ports:
+      - "6379:6379"
+      volumes:
+      - redis-data:/data
+
+  volumes:
+    redis-data:
+    sql-data:
+      
+      
+     
+ 
+        
 
