--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,6 +7,7 @@
      
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=skinet;User Id=SA;Password=Complex@123;trustServerCertificate=true;"
+    "DefaultConnection": "Server=localhost,1433;Database=skinet;User Id=SA;Password=Complex@123;trustServerCertificate=true;",
+    "Redis": "localhost"
   }
 }
